--- a/.github/workflows/netlify-deployment.yml
+++ b/.github/workflows/netlify-deployment.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.2
