Update: remove prefix --if-present in yarn build

--- a/.github/workflows/netlify-deployment.yml
+++ b/.github/workflows/netlify-deployment.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build site
         run: |
           yarn install --production
-          yarn build --if-present
+          yarn build
 
       - name: Deploy to netlify
         uses: nwtgck/actions-netlify@v1.1.11
