change configuration of netlify deployment

--- a/.github/workflows/netlify-deployment.yml
+++ b/.github/workflows/netlify-deployment.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.2
         with:
-          version: 12.x
+          node-version: 12.x
 
       - name: Build site
         run: |
@@ -24,10 +24,7 @@ jobs:
           yarn build
 
       - name: Deploy to netlify
-        uses: netlify/actions/cli@master
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_APP_ID }}
-        with:
-          args: deploy --dir=public --prod
-          secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+        run: npx netlify-cli deploy --dir=public
