change netlify deployment config to netlify/action

--- a/.github/workflows/netlify-deployment.yml
+++ b/.github/workflows/netlify-deployment.yml
@@ -24,7 +24,9 @@ jobs:
           yarn build
 
       - name: Deploy to netlify
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=public -p
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_APP_ID }}
-        run: npx netlify-cli deploy --dir=public
