⚙ add paths property to netlify-deployment workflow

--- a/.github/workflows/netlify-deployment.yml
+++ b/.github/workflows/netlify-deployment.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - develop
+    paths:
+      - "src/**"
+      - "gatsby-*.js"
+      - ".env"
 
 jobs:
   deploy:
