chore: set auto merge for update patch version

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,10 @@
 {
   "extends": ["config:base"],
-  "baseBranches": ["develop"]
+  "baseBranches": ["develop"],
+  "packageRules": [
+    {
+      "updateTypes": ["patch"],
+      "automerge": true
+    }
+  ]
 }
