--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,10 @@
 {
   "extends": ["config:base"],
   "baseBranches": ["develop"],
-  "packageRules": [
-    {
-      "updateTypes": ["patch"],
-      "automerge": true
-    }
-  ]
+  "patch": {
+    "automerge": true
+  },
+  "pin": {
+    "automerge": true
+  }
 }
