--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,6 @@
 {
   "extends": ["config:base"],
   "baseBranches": ["develop"],
-  "patch": {
-    "automerge": true
-  },
-  "pin": {
-    "automerge": true
-  }
+  "automerge": true,
+  "major": { "automerge": false }
 }
