--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\""
   },
   "dependencies": {
-    "@emotion/core": "11.0.0",
-    "@emotion/styled": "11.0.0",
+    "@emotion/core": "10.1.1",
+    "@emotion/styled": "^10.0.27",
     "@types/styled-components": "5.1.4",
     "autoprefixer": "10.0.4",
     "classnames": "2.2.6",
@@ -41,7 +41,7 @@
     "gatsby-transformer-sharp": "2.7.0",
     "gatsby-transformer-yaml": "2.6.0",
     "lodash": "4.17.20",
-    "node-sass": "5.0.0",
+    "node-sass": "^4.14.1",
     "polished": "4.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
