--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@emotion/core": "10.1.1",
-    "@emotion/styled": "10.0.27",
+    "@emotion/react": "11.1.4",
+    "@emotion/styled": "11.0.0",
     "@types/styled-components": "5.1.7",
     "autoprefixer": "10.2.1",
     "classnames": "2.2.6",
