--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "yarn develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "test": "jest",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\""
   },
   "dependencies": {
@@ -49,16 +50,24 @@
     "react-helmet": "6.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
     "@types/classnames": "2.2.11",
+    "@types/jest": "^26.0.20",
     "@types/react-helmet": "6.1.0",
     "@typescript-eslint/eslint-plugin": "4.11.1",
     "@typescript-eslint/parser": "4.11.1",
     "add": "2.0.6",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.10.0",
     "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "3.3.0",
     "eslint-plugin-react": "7.22.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "prettier": "2.2.1",
+    "tslint-react": "^5.0.0",
     "typescript": "4.1.3",
     "yarn": "1.22.10"
   },
