--- a/.github/workflows/pr-notification.yml
+++ b/.github/workflows/pr-notification.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    if: contains(github.event.pull_request.head.ref, 'renovate/') == true
     runs-on: ubuntu-latest
 
     steps:
