--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "version": "0.1.0",
   "author": "Sulhan Juahary",
   "scripts": {
-    "build": "gatsby build",
+    "build:dev": "NODE_ENV=development yarn clean:pub && gatsby build",
+    "build": "NODE_ENV=production yarn clean && gatsby build",
     "develop": "gatsby develop",
     "start": "yarn develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "clean:pub": "rimraf ./public",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\""
@@ -73,6 +75,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.3",
     "prettier": "2.2.1",
+    "rimraf": "^3.0.2",
     "tslint-react": "5.0.0",
     "typescript": "4.1.3",
     "yarn": "1.22.10"
