feat: add prefix for post slug

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
-GATSBY_SITE_NAME=
-GATSBY_BASE_URL=
+# The name of your site
+SITE_NAME=
+
+# Your base site url 
+SITE_URL=
+
+# Show post per page in the pagination. default: 5
+POST_PER_PAGE=
+
+# Prefix of post URI (use '/' in your prefix). default: empty
+# eg: '/blog' so it will be '/blog/your-post-slug'
+POST_PREFIX_URI=
