--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-canonical-urls": "2.10.0",
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-emotion": "5.4.0",
+    "gatsby-plugin-feed": "^2.13.0",
     "gatsby-plugin-manifest": "2.12.0",
     "gatsby-plugin-nprogress": "2.10.0",
     "gatsby-plugin-offline": "3.10.0",
